--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/* General Page Styling */
+/* Page Styling */
 body {
     font-family: Arial, Helvetica, sans-serif;
   background-color: #fff4f7;
@@ -60,11 +60,6 @@ ul#candyList {
   padding: 0;
   margin-top: 30px;
   color: black;
-}
-.button-group {
-  display: flex;
-  gap: 6px;
-  flex-wrap: nowrap;
 }
 
 ul#candyList li {
